--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drowsiness Detection</title>
-    <link rel="stylesheet" href="style.css'">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <h1>Drowsiness Detection System</h1>
     <div>
         <img src="{{ url_for('video_feed') }}" alt="Video Feed" style="width: 640px; height: 480px;">
     </div>
+    <h2 id="prediction">Prediction: Loading...</h2>
+    <h3 id="timer">Eye Closed Duration: 0 seconds</h3>
+    <h3 id="start_time">start Time: 1 seconds</h3>
+
+    <script>
+        function updatePrediction() {
+            fetch('/get_prediction')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('prediction').innerText = 'Prediction: ' + data.prediction;
+                    document.getElementById('timer').innerText = 'Eye Closed Duration: ' + data.duration.toFixed(2) + ' seconds';
+                    document.getElementById('start_time').innerText = 'start Time: ' + data.time ;
+                });
+        }
+
+        setInterval(updatePrediction, 500);  // Update prediction and timer every 500ms
+    </script>
 </body>
 </html>
