--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    background-color: #f0f0f0;
+    background-color: black;
     font-family: Arial, sans-serif;
 }
 
